package pattern;

public class BaseComponent implements Component {
    public String operation() { return "mensaje"; }
}
