package pattern;

public interface Component {
    String operation();
}
